<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/light_blue"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="281dp"
        android:animateLayoutChanges="true"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="152dp"
            android:layout_height="51dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/black_buttons"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="265dp"
            android:layout_height="266dp"
            android:contentDescription="@string/todo"
            android:rotation="270"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/semi_circle" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="215dp"
            android:layout_height="217dp"
            android:contentDescription="@string/todo"
            android:rotationY="0"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/semi_circleright" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="163dp"
        android:contentDescription="@string/SemiCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oval" />

    <LinearLayout
        android:id="@+id/inputHandler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:animateLayoutChanges="true"
        android:elevation="10dp"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="5dp"
        android:transitionGroup="true"
        android:translationZ="10dp"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/regQuote"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/let_s_create_your_account"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/profilePicLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <androidx.cardview.widget.CardView
                android:layout_width="99dp"
                android:layout_height="100dp"
                android:visibility="visible"
                app:cardCornerRadius="60dp">

                <ImageView
                    android:id="@+id/userProfilePic"
                    android:layout_width="84dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/prfilePicSelector"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:scaleX="2"
                    android:scaleY="2"
                    app:srcCompat="@drawable/ic_launcher_foreground" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/profile_pic"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:animateLayoutChanges="true"
            android:foregroundGravity="top"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/nameInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputbar_art"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp" />

            <EditText
                android:id="@+id/phoneInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputbar_art"
                android:ems="10"
                android:hint="@string/enter_your_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:id="@+id/userClassGenLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:animateLayoutChanges="true"


                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:translationZ="10dp"
                android:visibility="visible">

                <Spinner
                    android:id="@+id/classSelectorInfo"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:elevation="20dp"
                    android:inputType="none"
                    android:minHeight="45dp"
                    android:popupElevation="16dp"
                    android:text="@string/choose_class"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Spinner
                    android:id="@+id/genderSelector"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:background="@color/black"
                    android:elevation="20dp"
                    android:minHeight="45dp"
                    android:popupElevation="16dp"
                    android:text="@string/gender"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userCredentialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/inputbar_art"
                android:ems="10"
                android:focusable="auto"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/inputbar_art"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress|textWebPassword"
                android:minHeight="48dp"
                android:nextFocusDown="@id/classSelectorInfo"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/inputbar_art"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress|textWebPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@drawable/black_buttons"
            android:gravity="center"
            android:paddingStart="60dp"
            android:paddingTop="10dp"
            android:paddingEnd="60dp"
            android:paddingBottom="10dp"
            android:text="@string/next"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:translationZ="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>