<resources>
    <string name="app_name">Tuition</string>
    <string name="Topbar">Layout</string>
    <string name="BottomBar">Layout</string>
    <string name="UserProfile">Layout</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="SemiCircle">semiCircle</string>
    <string name="let_s_create_your_account">Let\'s Create Your Account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="profile_pic">Profile pic</string>
...
