...
            android:scaleY="1"
            app:srcCompat="@drawable/profile_pic"
            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/openClassObj"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_art"
        android:text="@string/let_s_start"
        android:textColor="@color/white"
...
